err/rpmrh.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Cerberus-1.1.egg-info'...
Listing './lib/python3.5/site-packages/PyTrie-0.3.egg-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/cerberus'...
Listing './lib/python3.5/site-packages/cerberus/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/click_log'...
Listing './lib/python3.5/site-packages/click_log-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytoml'...
Listing './lib/python3.5/site-packages/pytoml-0.1.14.egg-info'...
Listing './lib/python3.5/site-packages/pyxdg-0.25.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_file-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/rpmrh'...
Listing './lib/python3.5/site-packages/rpmrh/cli'...
Compiling './lib/python3.5/site-packages/rpmrh/cli/command.py'...
***   File "./lib/python3.5/site-packages/rpmrh/cli/command.py", line 83
    **_config_options,
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rpmrh/cli/tooling.py'...
***   File "./lib/python3.5/site-packages/rpmrh/cli/tooling.py", line 155
    **option_kind,
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rpmrh/conf.d'...
Listing './lib/python3.5/site-packages/rpmrh/configuration'...
Compiling './lib/python3.5/site-packages/rpmrh/configuration/service.py'...
***   File "./lib/python3.5/site-packages/rpmrh/configuration/service.py", line 27
    INIT_REGISTRY: InitializerMap = {}
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rpmrh/service'...
Compiling './lib/python3.5/site-packages/rpmrh/service/koji.py'...
***   File "./lib/python3.5/site-packages/rpmrh/service/koji.py", line 276
    ) -> rpm.Metadata:
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rpmrh/util'...
Compiling './lib/python3.5/site-packages/rpmrh/util/net.py'...
***   File "./lib/python3.5/site-packages/rpmrh/util/net.py", line 41
    ) -> Union[str, bytes]:
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rpmrh-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/ruamel'...
Listing './lib/python3.5/site-packages/ruamel/yaml'...
Listing './lib/python3.5/site-packages/ruamel.yaml-0.15.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sortedcontainers'...
Listing './lib/python3.5/site-packages/sortedcontainers-1.5.9.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xdg'...
Listing './share'...
Listing './share/python-wheels'...
